--- a/dest/basket.html
+++ b/dest/basket.html
@@ -111,7 +111,23 @@
       <section class="section basket" id="basket">
         <div class="section__bg section__bg--light"></div>
         <div class="c-grid">
-          <div class="basket__wrapper"></div>
+          <div class="basket__wrapper">
+            <div class="basket__row basket__row-0 basket__row--tabs">
+              <div class="basket__tabs">
+                <ul class="basket__tabs-list">
+                  <li class="basket__tabs-item"><a class="basket__tabs-link is-active" href="#" title="" data-basket-tabs-id="0">1. Twoje zamówienie</a></li>
+                  <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="1">2. Dane adresowe</a></li>
+                  <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="2">3. Dostawa i płatność</a></li>
+                  <li class="basket__tabs-item"><a class="basket__tabs-link" href="#" title="" data-basket-tabs-id="3">4. Podsumowanie</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="basket__row basket__row-0 basket__row--card"></div>
+            <div class="basket__row basket__row-0 basket__row--data"></div>
+            <div class="basket__row basket__row-0 basket__row--delivery"></div>
+            <div class="basket__row basket__row-0 basket__row--result"></div>
+            <div class="basket__row basket__row-0 basket__row--message"></div>
+          </div>
         </div>
       </section>
       <!-- SECTION BASKET :: END-->
